@@ -151,9 +151,11 @@
 
 <!-- Translators -->
   <!-- af translation coordinator -->
-  <person id="x-petrijooste">
-    <name>Petri Jooste</name>
-    <email>rkwjpj@puk.ac.za</email>
+  <person id="x-friedel">
+    <name>Friedel Wolff</name>
+    <email>friedel@translate.org.za</email>
+    <irc-nickname>friedel</irc-nickname>
+    <bugzilla-account>friedel@translate.org.za</bugzilla-account>
   </person>
   <!-- sq translation coordinator -->
   <person id="laurenti">
