@@ -11,8 +11,8 @@
   </defaults>
   <team id="af">
     <_language id="af">Afrikaans</_language>
-    <coordinator id="x-petrijooste"/>
-    <webpage>https://savannah.gnu.org/projects/gnomeaf/</webpage>
+    <coordinator id="x-friedel"/>
+    <webpage>http://translate.org.za/</webpage>
   </team>
   <team id="sq">
     <_language id="sq">Albanian</_language>
