@@ -1,3 +1,10 @@
+2008-01-04  Johannes Schmid <jhs@gnome.org>
+
+	* translation-teams.xml.in:
+ 	* people.xml.in:
+	
+	Changed [af] translation coordinator
+
 2007-12-30  Johannes Schmid <jhs@gnome.org>
 
 	* translation-teams.xml.in:
